--- a/package.json
+++ b/package.json
@@ -8,21 +8,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "expo": "~39.0.2",
+    "expo-secure-store": "^9.2.0",
     "expo-status-bar": "~1.0.2",
+    "firebase": "^7.23.0",
     "formik": "^2.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-paper": "^4.2.0",
+    "react-native-screens": "^2.11.0",
+    "react-native-web": "~0.13.12",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
-    "react-native-web": "~0.13.7",
+    "@babel/core": "^7.11.6",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/webpack-env": "^1.15.3",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "react-native-web": "~0.13.7",
     "typescript": "~3.9.5"
   },
   "private": true
