--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "expo": "~39.0.2",
+    "expo-background-fetch": "~8.5.0",
+    "expo-constants": "^9.2.0",
+    "expo-notifications": "^0.7.2",
     "expo-secure-store": "^9.2.0",
     "expo-status-bar": "~1.0.2",
+    "expo-task-manager": "~8.5.0",
     "firebase": "^7.23.0",
     "formik": "^2.2.0",
     "react": "16.13.1",
@@ -22,7 +26,8 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-paper": "^4.2.0",
     "react-native-screens": "^2.11.0",
-    "react-native-web": "~0.13.12",
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^7.1.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
