--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "dotenv": "^8.2.0",
     "expo": "~39.0.2",
-    "expo-background-fetch": "~8.5.0",
+    "expo-background-fetch": "^8.5.0",
     "expo-constants": "^9.2.0",
     "expo-notifications": "^0.7.2",
     "expo-secure-store": "^9.2.0",
     "expo-status-bar": "~1.0.2",
-    "expo-task-manager": "~8.5.0",
+    "expo-task-manager": "^8.5.0",
     "firebase": "^7.23.0",
     "formik": "^2.2.0",
     "react": "16.13.1",
