--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "@reduxjs/toolkit": "^1.4.0",
     "dotenv": "^8.2.0",
     "expo": "~39.0.2",
     "expo-background-fetch": "^8.5.0",
@@ -29,6 +30,9 @@
     "react-native-screens": "^2.11.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
