--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "expo-secure-store": "^9.2.0",
     "expo-status-bar": "~1.0.2",
     "expo-task-manager": "^8.5.0",
-    "firebase": "^7.23.0",
+    "firebase": "^7.9.0",
     "formik": "^2.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-gesture-handler": "^1.8.0",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-paper": "^4.2.0",
-    "react-native-screens": "^2.11.0",
+    "react-native-screens": "~2.10.1",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.1",
