--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "expo start",
+    "prod": "expo start --no-dev --minify",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -13,7 +14,7 @@
     "@react-navigation/stack": "^5.9.3",
     "@reduxjs/toolkit": "^1.4.0",
     "dotenv": "^8.2.0",
-    "expo": "~39.0.2",
+    "expo": "^38.0.9",
     "expo-background-fetch": "^8.5.0",
     "expo-constants": "^9.2.0",
     "expo-notifications": "^0.7.2",
@@ -24,7 +25,7 @@
     "formik": "^2.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-paper": "^4.2.0",
     "react-native-screens": "~2.10.1",
